# AudioToMMP

./: CMakeLists.txt  README.md  housebeatgenerator.cpp  housebeatgenerator.h  housepianostabifier.cpp  housepianostabifier.h  housevocalstabs.cpp  housevocalstabs.h  mainwindow.cpp  mainwindow.h  smartpatterneditor.cpp  smartpatterneditor.h  vocalxpresstab.cpp  vocalxpresstab.h
.github/workflows/: build.yml
